--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
-  }, 
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^1.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@next-auth/supabase-adapter": "^0.2.1",
     "@prisma/client": "^5.9.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
